--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>Петербург за неделю</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    .tabs {
+      display: flex;
+      overflow-x: auto;
+      background: #f0f0f0;
+    }
+    .tab {
+      padding: 15px 20px;
+      cursor: pointer;
+      border-bottom: 2px solid transparent;
+      transition: 0.3s;
+    }
+    .tab.active {
+      border-bottom: 2px solid #007BFF;
+      font-weight: bold;
+    }
+    .content {
+      padding: 20px;
+      display: none;
+    }
+    .content.active {
+      display: block;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
 
+<h2 style="text-align:center; padding: 20px;">Петербург за неделю: 8–14 июня</h2>
+
+<div class="tabs">
+  <div class="tab active">8 июня</div>
+  <div class="tab">9 июня</div>
+  <div class="tab">10 июня</div>
+  <div class="tab">12 июня</div>
+  <div class="tab">13 июня</div>
+  <div class="tab">14 июня</div>
+</div>
+
+<div class="content active">
+  <h3>8 июня (Суббота) – Центральный день</h3>
+  <p><strong>Маршрут:</strong></p>
+  <ul>
+    <li>Завтрак дома</li>
+    <li>Выход из дома → м. Фрунзенская (~7 мин)</li>
+    <li>Невский проспект: от Гостиного двора до Казанского собора</li>
+    <li>Исаакиевский собор</li>
+    <li>Дворцовая площадь и набережная Невы</li>
+  </ul>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/lyuli/1066533841/"  target="_blank">Кафе "Люли"</a> или <a href="https://yandex.ru/maps/org/burger_waffle/146288849241/"  target="_blank">Burger & Waffle</a></p>
+  <p><strong>Ужин:</strong> Дома или <a href="https://yandex.ru/maps/org/cafe_de_paris/111037953941/"  target="_blank">Café de Paris</a></p>
+  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A1e0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+</div>
+
+<div class="content">
+  <h3>9 июня (Воскресенье) – Петергоф</h3>
+  <p><strong>Маршрут:</strong></p>
+  <ul>
+    <li>Завтрак дома</li>
+    <li>Фрунзенская → Балтийская → Ласточка до Петергофа</li>
+    <li>Нижний парк, фонтаны, Большой дворец</li>
+    <li>Возвращение вечером</li>
+  </ul>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/rumba/134976755930/" target="_blank">Румба</a> или <a href="https://yandex.ru/maps/org/kultura_food_market/151266585485/" target="_blank">Kultura Food Market</a></p>
+  <p><strong>Ужин:</strong> Дома или <a href="https://yandex.ru/maps/org/steikkhous_petr/111037953941/" target="_blank">Стейкхаус Пётр</a></p>
+  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A5e0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+</div>
+
+<div class="content">
+  <h3>10 июня (Понедельник) – Эрмитаж + водная прогулка</h3>
+  <p><strong>Маршрут:</strong></p>
+  <ul>
+    <li>Завтрак дома</li>
+    <li>Фрунзенская → Невский проспект → Эрмитаж</li>
+    <li>Летний сад</li>
+    <li>Водная прогулка по каналам</li>
+  </ul>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/stolovaya_1/1088965782/" target="_blank">Столовая №1</a> или <a href="https://yandex.ru/maps/org/sushkofeyka/159237442525/" target="_blank">Сушкофейка</a></p>
+  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/pizza_like/137976687711/" target="_blank">Pizza Like</a> или <a href="https://yandex.ru/maps/org/coffee_lab/147286738204/" target="_blank">Coffee Lab</a></p>
+  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9e0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+</div>
+
+<div class="content">
+  <h3>12 июня (Среда) – Петропавловская крепость + каналы</h3>
+  <p><strong>Маршрут:</strong></p>
+  <ul>
+    <li>Завтрак дома</li>
+    <li>Фрунзенская → Горьковская → пристань катера</li>
+    <li>Петропавловская крепость</li>
+    <li>Прогулка по каналам</li>
+  </ul>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/fregat/112161953941/" target="_blank">Фрегат</a> или <a href="https://yandex.ru/maps/org/palkin_bistro/111037953941/" target="_blank">Palkin Bistro</a></p>
+  <p><strong>Ужин:</strong> Дома или <a href="https://yandex.ru/maps/org/tea_garden/149286738204/" target="_blank">Tea Garden</a></p>
+  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Acd0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+</div>
+
+<div class="content">
+  <h3>13 июня (Четверг) – совместное время + расслабление для девушки</h3>
+  <p><strong>Маршрут:</strong></p>
+  <ul>
+    <li>Завтрак дома</li>
+    <li>Фрунзенская → Сенная площадь</li>
+    <li>Каналы, Русский музей / Михайловский замок</li>
+    <li>Обед и свобода</li>
+  </ul>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/granatovyy_brasyet/112161953941/" target="_blank">Гранатовый браслет</a> или <a href="https://yandex.ru/maps/org/la_maree/149286738204/" target="_blank">La Marée</a></p>
+  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/yota_space/149286738204/" target="_blank">Yota Space</a> или <a href="https://yandex.ru/maps/org/paparazzi/111037953941/" target="_blank">Paparazzi</a></p>
+  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aab0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+</div>
+
+<div class="content">
+  <h3>14 июня (Пятница) – прощальный день</h3>
+  <p><strong>Маршрут:</strong></p>
+  <ul>
+    <li>Завтрак дома</li>
+    <li>Фрунзенская → Чкаловская → Смольный собор</li>
+    <li>Петроградская сторона → Газпром Арена / парк Лахта</li>
+    <li>Прощальная прогулка</li>
+  </ul>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/ural_skaya_pelmennaya_1/112161953941/" target="_blank">Уральские пельмени</a> или <a href="https://yandex.ru/maps/org/shashlychnaya_1/149286738204/" target="_blank">Шашлычная №1</a></p>
+  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/yota_space/149286738204/" target="_blank">Yota Space</a> или <a href="https://yandex.ru/maps/org/paparazzi/111037953941/" target="_blank">Paparazzi</a></p>
+  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aef0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+</div>
+
+<script>
+  const tabs = document.querySelectorAll('.tab');
+  const contents = document.querySelectorAll('.content');
+
+  tabs.forEach((tab, index) => {
+    tab.addEventListener('click', () => {
+      tabs.forEach(t => t.classList.remove('active'));
+      contents.forEach(c => c.classList.remove('active'));
+      tab.classList.add('active');
+      contents[index].classList.add('active');
+    });
+  });
+</script>
+
+<!-- Подключение Яндекс.Карт -->
+<script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=a8d248f2-d876-40ee-aba9-2f8a13275c3c"></script>
+
+</body>
+</html>
