--- a/index.html
+++ b/index.html
@@ -2,46 +2,99 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Петербург за неделю</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
+    :root {
+      --bg: #121212;
+      --card-bg: #1e1e1e;
+      --text: #ffffff;
+      --accent: #007BFF;
+      --tab-active: #007BFF;
     }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+    }
+
+    header {
+      text-align: center;
+      padding: 20px;
+      background: #1a1a1a;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+
     .tabs {
       display: flex;
       overflow-x: auto;
-      background: #f0f0f0;
+      background: #222;
+      padding: 10px 0;
     }
+
     .tab {
-      padding: 15px 20px;
+      flex-shrink: 0;
+      padding: 12px 20px;
       cursor: pointer;
-      border-bottom: 2px solid transparent;
+      color: var(--text);
       transition: 0.3s;
+      border-bottom: 2px solid transparent;
     }
+
     .tab.active {
-      border-bottom: 2px solid #007BFF;
+      border-bottom: 2px solid var(--tab-active);
       font-weight: bold;
     }
+
     .content {
-      padding: 20px;
       display: none;
+      padding: 20px;
     }
+
     .content.active {
       display: block;
     }
-    iframe {
+
+    h3 {
+      margin-top: 0;
+    }
+
+    p, ul {
+      line-height: 1.6;
+    }
+
+    a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .map {
       width: 100%;
-      height: 400px;
-      border: none;
+      height: 300px;
       margin-top: 20px;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    @media (min-width: 600px) {
+      .map {
+        height: 400px;
+      }
     }
   </style>
 </head>
 <body>
 
-<h2 style="text-align:center; padding: 20px;">Петербург за неделю: 8–14 июня</h2>
+<header>
+  <h1>Петербург за неделю</h1>
+  <p>8–14 июня | Красиво, удобно, для телефона</p>
+</header>
 
 <div class="tabs">
   <div class="tab active">8 июня</div>
@@ -53,88 +106,82 @@
 </div>
 
 <div class="content active">
-  <h3>8 июня (Суббота) – Центральный день</h3>
-  <p><strong>Маршрут:</strong></p>
+  <h3>8 июня – Центральный день</h3>
   <ul>
     <li>Завтрак дома</li>
     <li>Выход из дома → м. Фрунзенская (~7 мин)</li>
-    <li>Невский проспект: от Гостиного двора до Казанского собора</li>
+    <li>Невский проспект: Гостиный двор → Казанский собор</li>
     <li>Исаакиевский собор</li>
     <li>Дворцовая площадь и набережная Невы</li>
   </ul>
   <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/lyuli/1066533841/"  target="_blank">Кафе "Люли"</a> или <a href="https://yandex.ru/maps/org/burger_waffle/146288849241/"  target="_blank">Burger & Waffle</a></p>
   <p><strong>Ужин:</strong> Дома или <a href="https://yandex.ru/maps/org/cafe_de_paris/111037953941/"  target="_blank">Café de Paris</a></p>
-  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A1e0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+  <div id="map_8" class="map"></div>
 </div>
 
 <div class="content">
-  <h3>9 июня (Воскресенье) – Петергоф</h3>
-  <p><strong>Маршрут:</strong></p>
+  <h3>9 июня – Петергоф</h3>
   <ul>
     <li>Завтрак дома</li>
     <li>Фрунзенская → Балтийская → Ласточка до Петергофа</li>
     <li>Нижний парк, фонтаны, Большой дворец</li>
     <li>Возвращение вечером</li>
   </ul>
-  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/rumba/134976755930/" target="_blank">Румба</a> или <a href="https://yandex.ru/maps/org/kultura_food_market/151266585485/" target="_blank">Kultura Food Market</a></p>
-  <p><strong>Ужин:</strong> Дома или <a href="https://yandex.ru/maps/org/steikkhous_petr/111037953941/" target="_blank">Стейкхаус Пётр</a></p>
-  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A5e0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/rumba/134976755930/"  target="_blank">Румба</a> или <a href="https://yandex.ru/maps/org/kultura_food_market/151266585485/"  target="_blank">Kultura Food Market</a></p>
+  <p><strong>Ужин:</strong> Дома или <a href="https://yandex.ru/maps/org/steikkhous_petr/111037953941/"  target="_blank">Стейкхаус Пётр</a></p>
+  <div id="map_9" class="map"></div>
 </div>
 
 <div class="content">
-  <h3>10 июня (Понедельник) – Эрмитаж + водная прогулка</h3>
-  <p><strong>Маршрут:</strong></p>
+  <h3>10 июня – Эрмитаж + водная прогулка</h3>
   <ul>
     <li>Завтрак дома</li>
     <li>Фрунзенская → Невский проспект → Эрмитаж</li>
     <li>Летний сад</li>
     <li>Водная прогулка по каналам</li>
   </ul>
-  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/stolovaya_1/1088965782/" target="_blank">Столовая №1</a> или <a href="https://yandex.ru/maps/org/sushkofeyka/159237442525/" target="_blank">Сушкофейка</a></p>
-  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/pizza_like/137976687711/" target="_blank">Pizza Like</a> или <a href="https://yandex.ru/maps/org/coffee_lab/147286738204/" target="_blank">Coffee Lab</a></p>
-  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9e0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/stolovaya_1/1088965782/"  target="_blank">Столовая №1</a> или <a href="https://yandex.ru/maps/org/sushkofeyka/159237442525/"  target="_blank">Сушкофейка</a></p>
+  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/pizza_like/137976687711/"  target="_blank">Pizza Like</a> или <a href="https://yandex.ru/maps/org/coffee_lab/147286738204/"  target="_blank">Coffee Lab</a></p>
+  <div id="map_10" class="map"></div>
 </div>
 
 <div class="content">
-  <h3>12 июня (Среда) – Петропавловская крепость + каналы</h3>
-  <p><strong>Маршрут:</strong></p>
+  <h3>12 июня – Петропавловская крепость + каналы</h3>
   <ul>
     <li>Завтрак дома</li>
     <li>Фрунзенская → Горьковская → пристань катера</li>
     <li>Петропавловская крепость</li>
     <li>Прогулка по каналам</li>
   </ul>
-  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/fregat/112161953941/" target="_blank">Фрегат</a> или <a href="https://yandex.ru/maps/org/palkin_bistro/111037953941/" target="_blank">Palkin Bistro</a></p>
-  <p><strong>Ужин:</strong> Дома или <a href="https://yandex.ru/maps/org/tea_garden/149286738204/" target="_blank">Tea Garden</a></p>
-  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Acd0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/fregat/112161953941/"  target="_blank">Фрегат</a> или <a href="https://yandex.ru/maps/org/palkin_bistro/111037953941/"  target="_blank">Palkin Bistro</a></p>
+  <p><strong>Ужин:</strong> Дома или <a href="https://yandex.ru/maps/org/tea_garden/149286738204/"  target="_blank">Tea Garden</a></p>
+  <div id="map_12" class="map"></div>
 </div>
 
 <div class="content">
-  <h3>13 июня (Четверг) – совместное время + расслабление для девушки</h3>
-  <p><strong>Маршрут:</strong></p>
+  <h3>13 июня – совместное время + расслабление для девушки</h3>
   <ul>
     <li>Завтрак дома</li>
     <li>Фрунзенская → Сенная площадь</li>
     <li>Каналы, Русский музей / Михайловский замок</li>
     <li>Обед и свобода</li>
   </ul>
-  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/granatovyy_brasyet/112161953941/" target="_blank">Гранатовый браслет</a> или <a href="https://yandex.ru/maps/org/la_maree/149286738204/" target="_blank">La Marée</a></p>
-  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/yota_space/149286738204/" target="_blank">Yota Space</a> или <a href="https://yandex.ru/maps/org/paparazzi/111037953941/" target="_blank">Paparazzi</a></p>
-  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aab0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/granatovyy_brasyet/112161953941/"  target="_blank">Гранатовый браслет</a> или <a href="https://yandex.ru/maps/org/la_maree/149286738204/"  target="_blank">La Marée</a></p>
+  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/yota_space/149286738204/"  target="_blank">Yota Space</a> или <a href="https://yandex.ru/maps/org/paparazzi/111037953941/"  target="_blank">Paparazzi</a></p>
+  <div id="map_13" class="map"></div>
 </div>
 
 <div class="content">
-  <h3>14 июня (Пятница) – прощальный день</h3>
-  <p><strong>Маршрут:</strong></p>
+  <h3>14 июня – прощальный день</h3>
   <ul>
     <li>Завтрак дома</li>
     <li>Фрунзенская → Чкаловская → Смольный собор</li>
     <li>Петроградская сторона → Газпром Арена / парк Лахта</li>
     <li>Прощальная прогулка</li>
   </ul>
-  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/ural_skaya_pelmennaya_1/112161953941/" target="_blank">Уральские пельмени</a> или <a href="https://yandex.ru/maps/org/shashlychnaya_1/149286738204/" target="_blank">Шашлычная №1</a></p>
-  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/yota_space/149286738204/" target="_blank">Yota Space</a> или <a href="https://yandex.ru/maps/org/paparazzi/111037953941/" target="_blank">Paparazzi</a></p>
-  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aef0d8a8c9b9e4c4e9e6e4d5f9e6e4d5f&amp;source=constructor" allowfullscreen></iframe>
+  <p><strong>Обед:</strong> <a href="https://yandex.ru/maps/org/ural_skaya_pelmennaya_1/112161953941/"  target="_blank">Уральские пельмени</a> или <a href="https://yandex.ru/maps/org/shashlychnaya_1/149286738204/"  target="_blank">Шашлычная №1</a></p>
+  <p><strong>Ужин:</strong> <a href="https://yandex.ru/maps/org/yota_space/149286738204/"  target="_blank">Yota Space</a> или <a href="https://yandex.ru/maps/org/paparazzi/111037953941/"  target="_blank">Paparazzi</a></p>
+  <div id="map_14" class="map"></div>
 </div>
 
 <script>
@@ -149,10 +196,42 @@
       contents[index].classList.add('active');
     });
   });
+
+  function initMap(id, points) {
+    const map = new ymaps.Map(id, {
+      center: [59.9346, 30.3351], // Центр Питера
+      zoom: 12,
+      controls: []
+    });
+
+    if (points.length > 1) {
+      const multiRoute = new ymaps.multiRouter.MultiRoute({
+        referencePoints: points,
+        params: {
+          routingMode: 'pedestrian'
+        }
+      }, {
+        boundsAutoApply: true
+      });
+
+      map.geoObjects.add(multiRoute);
+    } else if (points.length === 1) {
+      map.setCenter(points[0]);
+    }
+  }
+
+  // Инициализация карт при загрузке API
+  window.initYaMap = () => {
+    initMap("map_8", [[59.9346, 30.3351], [59.9346, 30.3351]]); // Невский
+    initMap("map_9", [[59.9346, 30.3351], [59.8595, 29.7995]]); // Петергоф
+    initMap("map_10", [[59.9346, 30.3351], [59.9346, 30.3351]]); // Эрмитаж
+    initMap("map_12", [[59.9346, 30.3351], [59.9533, 30.3053]]); // Петропавловская крепость
+    initMap("map_13", [[59.9346, 30.3351], [59.9156, 30.3078]]); // Сенная
+    initMap("map_14", [[59.9346, 30.3351], [59.9533, 30.3053]]); // Газпром Арена
+  };
 </script>
 
-<!-- Подключение Яндекс.Карт -->
-<script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=a8d248f2-d876-40ee-aba9-2f8a13275c3c"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=YOUR_YANDEX_MAPS_API_KEY&onload=initYaMap"></script>
 
 </body>
 </html>
